--- a/CSS/CheckBox/index.html
+++ b/CSS/CheckBox/index.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #checkbox:checked ~ .container {
-            display: block;
-        }
-        .container{
-            display: none;
-        }
-        #checkbox{
-            display: none;
-        }
-        .label {
-            height: 2em;
-            width: 3em;
-            border-radius: 7px;
-            background-color: rgb(60, 91, 195);
-            /* align-self: center; */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <input type="checkbox" name="Checkbox" id="checkbox">
