--- a/CSS/Modes/index.html
+++ b/CSS/Modes/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim sapiente eaque quos neque maxime molestias quis ipsam officia sequi animi praesentium, inventore temporibus quo voluptas placeat tempora necessitatibus ullam culpa.</p>
+    <select name="mode" id="mode">
+        <option value="dark">Dark</option>
+        <option value="light">Light</option>
+    </select>
 </body>
 </html>
