--- a/CSS/ResponsiveContainer.html
+++ b/CSS/ResponsiveContainer.html
@@ -13,9 +13,9 @@
     }
 
     /* Default Content Style */
-    /* .card-content {
+    .card-content {
       display: block;
-    } */
+    }
 
     /* When the Card is wider than 400px */
     @container (min-width: 400px) {
